- some general simplifications - implement loading of java notebooks