@@ -5,7 +5,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.awt.image.BufferedImage;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 
 import javax.imageio.ImageIO;
 
@@ -18,7 +18,7 @@ public class ImageHandlerTest {
 
     @Test
     void testImageRender() throws IOException {
-        BufferedImage image = ImageIO.read(new URL("https://www.xmpie.com/VDPSoftware/assets/images/untitled-11-1046x547.png"));
+        BufferedImage image = ImageIO.read(URI.create("https://www.xmpie.com/VDPSoftware/assets/images/untitled-11-1046x547.png").toURL());
         DisplayData dd = new DefaultRenderer().render(image);
         assertNotNull(dd);
         assertTrue(dd.data().containsKey(MIMEType.PNG.toString()));
